fixed spacing, font size

--- a/src/common/components/section/SectionComponent.css
+++ b/src/common/components/section/SectionComponent.css
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: center;
   font-family: 'Poppins';
-  width: 100vw;
+  width: auto;
 }
 
 .page-section {
@@ -25,6 +25,7 @@
 
 .section-descript {
   text-align: left;
-  font-size: 16pt;
+  font-size: 16px;
   padding-bottom: 0pt;
+  line-height: 36px;
 }
