--- a/src/pages/home/components/HomeDoulaProgram.css
+++ b/src/pages/home/components/HomeDoulaProgram.css
@@ -10,7 +10,7 @@
 
 .text-description {
   width: 88vw;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .academy-description {
@@ -22,7 +22,7 @@
 }
 
 .academy-description-text {
-  font-size: 18px;
+  font-size: 16px;
   width: 60%;
   min-width: 300px;
   height: auto;
@@ -31,6 +31,7 @@
 }
 
 .academy-description-img {
+  padding-top: 24px;
   width: 40%;
   max-width: 400px;
   height: auto;
