--- a/src/pages/home/components/HomeIntro.css
+++ b/src/pages/home/components/HomeIntro.css
@@ -1,3 +1,4 @@
 .homeintro {
   padding-top: 72pt;
+  font-size: 16px;
 }
